Week5_k8s/simple_pod/simple_deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
  labels:
    app: hello-dep

spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-webapp
  template:
    metadata:
      labels:
        app: hello-webapp
    spec:
      containers:
        - name: webapp
          image: ajduet/hello-dep
          ports:
            - containerPort: 8080
