Week5_k8s/simple_pod/simple_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-pod
  labels:
    app: myapp

spec:
  containers:
    - name: simple-pod-container
      image: busybox
      command: ['sh', '-c', 'echo Hello Kubenetes! && sleep 3600']
      ports:
        - containerPort: 8080
