Week5_k8s/simple_pod/tomcat_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-pod
  labels:
    app: server
spec:
  containers:
    - name: tomcat-server
      image: tomcat:8.5.54-jdk8-openjdk
      command: ['catalina.sh', 'run']
      ports:
        - containerPort: 8080
