Week5_k8s/simple_pod/simple_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: myapp
