Week5_k8s/simple_pod/simple_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-hello-nodeport
spec:
  type: NodePort
  ports:
    - name: service-port
      port: 3050 # used by other pods
      targetPort: 8080 # port exposed on the container
      nodePort: 31515 # used to access from the outside
      protocol: TCP
  selector:
    app: myapp
