Week5_k8s/simple_pod/tomcat_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8080
      nodePort: 31116
  selector:
    app: server
