Week5_k8s/simple_pod/simple_ingress.yaml
# ingress allows the cluster to expose a service or services
# to the outside world. It is made up of 2 parts
# an ingress controller which ensures that ingress is always running
# and an ingress object that routes according to a ruleset
# this file create the ingress object and defines the routing rules
# minikube will automatically create the ingress controller `minikube addons enable ingress`
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # /x/y -> /x
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /service
            backend:
              serviceName: simple-service
              servicePort: 8080
